# mcp_coordinator

./: .env.example  .gitignore  CHANGELOG.md  FIX_SUMMARY.md  GEMINI.md  QUICK_FIX.md  QUICK_START.md  README.md  README_FIX.md  SKILLS_COMPARISON.md  debug_discovery.py  example_mcp_config.json  inspect_mcp.py  mcp_servers_example.json  pyproject.toml  setup.sh  test_server.sh
docs/: CONFIGURATION.md  COORDINATOR_TOOLS.md  PATTERNS.md  SETUP_FIXED.md  SETUP_SUMMARY.md  VERIFICATION_CHECKLIST.md  rough_concept.md
examples/: basic_chaining.py  building_skills.py  experiment_research.py  inspect_mcp.py  multi_tool.py  new_config_system.py  verify_skill.py
mcp_tools/: README.md  __init__.py
scripts/: README.md  debug_discovery.py  generate_adapters.py  inspect_tools.py  query_mcp_context.py  retry_notebooklm.py  run_tool.py  setup_notebooklm_auth.py  test_discovery.py  test_execution.py  test_notebooklm.py  test_notebooklm_full.py  test_path.py  test_resources.py  test_skills.py  verify_client.py  verify_notebooklm.py  verify_run_skill.py  verify_skill_execution.py
skills/: Skills_README.md  research.py
src/mcp_coordinator/: __init__.py  _executor_helper.py  cli.py  config.py  coordinator.py  coordinator_client.py  database.py  discovery.py  executor.py  generator.py  runtime.py  server.py  skill_harness.py  skills.py  smol_executor.py
src/mcp_coordinator/core/: __init__.py  client.py  config.py
tests/: test_platform_resolution.py  test_timeouts.py
