[project]
name = "mcp-coordinator"
version = "0.1.0"
description = "Universal code execution framework for MCP servers - implements Anthropic's progressive disclosure pattern"
authors = [
    {name = "MCP Community", email = "community@modelcontextprotocol.io"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["mcp", "model-context-protocol", "ai", "agents", "code-execution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.1.0",
    "fastmcp>=2.0.0",  # Modern MCP server framework
    "smolagents>=1.0.0",  # HuggingFace code execution framework
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "rich>=13.0.0",  # Beautiful CLI output
    "python-dotenv>=1.0.0",  # Environment variable management
    "litellm>=1.50.0",  # Universal LLM API (Ollama, OpenAI, etc)
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
docker = [
    "docker>=7.0.0",  # Docker executor for smolagents
]
e2b = [
    "e2b-code-interpreter>=1.0.0",  # E2B remote execution
]
modal = [
    "modal>=0.70.0",  # Modal serverless execution
]

[project.urls]
Homepage = "https://github.com/mcp-community/mcp-coordinator"
Documentation = "https://github.com/mcp-community/mcp-coordinator/blob/main/docs/ARCHITECTURE.md"
Repository = "https://github.com/mcp-community/mcp-coordinator"
Issues = "https://github.com/mcp-community/mcp-coordinator/issues"

[project.scripts]
mcp-coordinator = "mcp_coordinator.cli:main"
mcp-coordinator-server = "mcp_coordinator.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
